# [tool.poetry]
# name = "Tenere"
# version = "0.1"
# authors = ["ville <ville.reima@gmail.com>"]
# description = "A telegram bot to help log gas and mileage information."
# license = "MIT"

# [tool.poetry.dependencies]
# python = "^3.11"
# fastapi = "^0.100.0"
# uvicorn = "^0.22.0"

# [tool.poetry.dev-dependencies]

# [build-system]
# requires = ["poetry-core>=1.0.0"]
# build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.ruff]
target-version = "py311"
select = [
    "A",
    "B",
    "E",
    "F",
    "ISC",
    "UP",
    "RUF",
    "SIM",
    "ARG",
    "PD",
    "PLE",
    "PLR",
    "PLW",
]
ignore = ["E712", "E501"]

[tool.ruff.per-file-ignores]
"tests/*" = ["PLR2004"]

[tool.pyright]
include = ["tenere"]
exclude = ["**/__pycache__"]
ignore = ["tests"]
venv = ".venv"

reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.12"
pythonPlatform = "Windows"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.poetry]
name = "tenere"
version = "0.1.0"
description = "A telegram bot to help log gas and mileage information."
authors = ["ville <ville.reima@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
arrow = "^1.3.0"
loguru = "^0.7.2"
motor = "^3.5.1"
pydantic = "^2.8.2"
python-telegram-bot = {extras = ["http2"], version = "^21.4"}
pydantic-settings = "^2.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
